revisi screenshoot sama build badge engga warna ijo

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:877548370261:ios:f8258f7b115bfcccb997dc",
-  "FIREBASE_PROJECT_ID": "ditonton-app-4ed0e",
-  "GCM_SENDER_ID": "877548370261"
+  "GOOGLE_APP_ID": "1:803097104855:ios:b7be3c5ba0da3f7cde3b92",
+  "FIREBASE_PROJECT_ID": "ditonton-89d8c",
+  "GCM_SENDER_ID": "803097104855"
 }
